0.08 2019-08-16
    * Document and optionally export expand_curl_pattern()
0.07 2019-01-03
    * Do not pre-generate values that we can iterate over later
      This reduces the memory usage and allows better resource limiting using
      the 'limit' parameter
      Query strings are still potentially expanding the memory usage
      exponentially

0.06 2018-12-22
    * Fixed query parameters not being generated/appended/kept when using
      a pattern to generate them

0.05 2018-12-19
    * The "url" entry is now named "path"
    * The "protocol" entry is now named "scheme"
      This brings our nomenclature somewhat more in line with URI and
      the rest of the world

0.04 2018-12-17
    * Plack prerequisite version is now 1.0047, also we now enforce the
      HTTP::Request prerequisite version of 6+
    * No need to upgrade

0.03 2018-12-16
    * Up the Plack::Request prerequisite in an attempt to narrow it down some
      more (instead of setting it to 1.0047, the current version that is known
      to work)

0.02 2018-12-13
    * Fixed test prerequisites (at least parts of Github #1)
    * Added bugtracker and license to the documentation

0.01 2018-12-11
    * Released on an unsuspecting world