@@ -1,5 +1,9 @@
 0.08 2019-08-16
     * Document and optionally export expand_curl_pattern()
+    * Don't wipe %ENV completely. Currently $TMP and $TEMP get kept in %ENV
+      but everything else is removed from it for as_dancer() and as_plack()
+      calls.
+
 0.07 2019-01-03
     * Do not pre-generate values that we can iterate over later
       This reduces the memory usage and allows better resource limiting using
